--- a/Klike/Info.plist
+++ b/Klike/Info.plist
@@ -36,5 +36,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Hey, mate, we  want to show you the best local events, that&apos;s why we need you to allow using location services.</string>
 </dict>
 </plist>
