--- a/Klike/Info.plist
+++ b/Klike/Info.plist
@@ -36,5 +36,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>FacebookAppID</key>
+	<string>760120780697547</string>
 </dict>
 </plist>
