added invite screen

--- a/Klike.xcodeproj/xcshareddata/xcschemes/Klike.xcscheme
+++ b/Klike.xcodeproj/xcshareddata/xcschemes/Klike.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "9D9D7C211AA0E95E00CBCE85"
-               BuildableName = "Konvene.app"
+               BuildableName = "Klike.app"
                BlueprintName = "Klike"
                ReferencedContainer = "container:Klike.xcodeproj">
             </BuildableReference>
@@ -57,7 +57,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9D9D7C211AA0E95E00CBCE85"
-            BuildableName = "Konvene.app"
+            BuildableName = "Klike.app"
             BlueprintName = "Klike"
             ReferencedContainer = "container:Klike.xcodeproj">
          </BuildableReference>
@@ -77,7 +77,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9D9D7C211AA0E95E00CBCE85"
-            BuildableName = "Konvene.app"
+            BuildableName = "Klike.app"
             BlueprintName = "Klike"
             ReferencedContainer = "container:Klike.xcodeproj">
          </BuildableReference>
@@ -101,7 +101,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9D9D7C211AA0E95E00CBCE85"
-            BuildableName = "Konvene.app"
+            BuildableName = "Klike.app"
             BlueprintName = "Klike"
             ReferencedContainer = "container:Klike.xcodeproj">
          </BuildableReference>
