--- a/Klike/Info.plist
+++ b/Klike/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.klikeapp.klike</string>
+	<string>com.klikeapp.klikebeta</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>2.1.10</string>
+	<string>2.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -58,7 +58,7 @@
 	<key>Fabric</key>
 	<dict>
 		<key>APIKey</key>
-		<string>6d5dd3891f98e1e67b2bb5ecf9b9cc540a6209d2</string>
+		<string>e1eebd36cb352180cc207554224ac1d703b82c75</string>
 		<key>Kits</key>
 		<array>
 			<dict>
