move apaddressbook to specific version, fixed event delete, fixed crash on facebook connect, fixed crash on invite ontants

--- a/Klike/Info.plist
+++ b/Klike/Info.plist
@@ -82,6 +82,10 @@
 	<string>Would Like to Access Your Location</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>fbauth2</string>
+	</array>
 	<key>UIMainStoryboardFile</key>
 	<string>Main</string>
 	<key>UIRequiredDeviceCapabilities</key>
